# engenharia_de_ia_com_python

./: README.md  pyproject.toml
modulo_1/: main.py
modulo_2/: historico.txt  main.py
modulo_3/: calculadora.py  logs.txt  main.py  salva_log.py
modulo_4/: main.py  test_chave_api.py
modulo_4/models/: base.py  llama.py  openai.py
modulo_5/: main.py  vector_store.py
modulo_6/: etl.py  main.py  support_logs.jsonl
